# spritepal

./: .geminiignore  .gitignore  .pre-commit-config.yaml  .spritepal-test_settings.json  .spritepal_settings.json  2mapping.spritepal-mapping.json  3mapping.spritepal-mapping.json  AGENTS.md  ARCHITECTURE_EVALUATION.md  AUDIT_REPORT.md  ActionPlan.md  BRITTLE_TESTS_REPORT.md  CAPPY_SEARCH_SUMMARY.md  CLAUDE.md  CONCURRENCY_AUDIT_REPORT.md  CX.txt  Clipboard Text.txt  FORENSIC_DESYNC_REPORT.md  FORENSIC_DESYNC_REPORT_ADVERSARIAL.md  FRAME_MAPPING_AUDIT.md  GEMINI.md  IDENTIFIED_BRITTLE_TESTS.md  LEAN_TESTING_AUDIT.md  LOD_REFACTORING_PLAN.md  MUSHROOM_SEARCH_SUMMARY.md  MUSHROOM_VISUALIZATION.html  PIPELINE_VERIFICATION.md  README.md  REDESIGN_PLAN.md  REVIEW_GAMMA.MD  SIMPLIFICATION_PLAN.md  SPECrearrangement.md  SPRITE_EDITOR_ANALYSIS.md  SPRITE_EDITOR_DESYNC_REPORT.md  SPRITE_GALLERY_MASTER.html  TEST_AUDIT_REPORT.md  TEST_SUITE_AUDIT.md  TEST_SUITE_AUDIT_FINAL.md  TEST_SUITE_AUDIT_REPORT.md  TEST_SUITE_CONSOLIDATION_PLAN.md  (+81 more)
spritepal/: .luacheckrc  .pre-commit-config.yaml  .spritepal_settings.json  AGENTS.md  CLAUDE.md  Clipboard Text.txt  DEV_NOTES.md  DI_QUICKREF.md  README.md  SPRITE_LEARNINGS_DO_NOT_DELETE.md  TESTING_DEBUG_GUIDE_DO_NOT_DELETE.md  UNIFIED_TESTING_GUIDE_DO_NOT_DELETE.md  UX_REVIEW.md  compile_hal_tools.py  launch_spritepal.py  pyproject.toml  requirements.txt  run_gameplay_capture.bat  run_sa1_hypothesis.bat  run_sprite_capture.bat
spritepal/.logs/: inventory.txt  pytest_fast.txt  pytest_fast_nongui.txt  pytest_fast_triage.txt  pytest_full_run.txt  pytest_full_run_final.txt  pytest_inventory.txt  pytest_memory_leak.txt  pytest_non_gui_verification.txt  pytest_not_gui.txt  pytest_not_gui_2.txt  pytest_not_gui_fix1.txt  pytest_triage_2.txt  sprite_finder_fix.txt  triage_fast.txt
spritepal/config/: sprite_locations.json
spritepal/core/: BREAKING_CHANGES.md  app_context.py  async_rom_cache.py  configuration_service.py  console_error_handler.py  controller.py  default_palette_loader.py  di_container.py  exceptions.py  extractor.py  hal_compression.py  injector.py  mmap_rom_reader.py  monitoring.py  optimized_rom_extractor.py  optimized_thumbnail_generator.py  palette_manager.py  parallel_sprite_finder.py  preview_orchestrator.py  region_analyzer.py  rom_extractor.py  rom_injector.py  rom_palette_extractor.py  rom_validator.py  sprite_config_loader.py  sprite_finder.py  sprite_validator.py  sprite_visual_validator.py  thread_safe_singleton.py  thumbnail_cache.py  tile_renderer.py  tile_utils.py  type_guards.py  types.py  visual_similarity_search.py
spritepal/core/managers/: __init__.py  application_state_manager.py  base_manager.py  cache_operations.py  context.py  core_operations_manager.py  error_helpers.py  factory.py  (+18 more)
spritepal/docs/: INDEX.md  PYTEST_MARKERS_GUIDE.md  QT_TESTING_BEST_PRACTICES.md  QT_TESTING_PATTERNS_ESTABLISHED.md  REAL_COMPONENT_TESTING_GUIDE.md  SIGNALS.md  WORKER_PATTERNS.md  application_flows.md  architecture.md  configuration_guide.md  data_flow_guide.md  dialog_development_guide.md  initialization_flow.md  main_window_flows.md  preview_generator_integration_example.py  qt_patterns.md  smart_offset_control_implementation_plan.md  smart_preview_implementation_example.py  testing_guide.md
spritepal/examples/: dependency_injection_migration.py  monitoring_integration_examples.py
spritepal/mesen2_exchange/: golden_test.json
spritepal/mesen2_integration/: run_extended_capture.py  runtime_vs_static_analysis.py  sprite_offset_correlator.py  visualize_mushroom_candidates.py
spritepal/scripts/: analyze_capture_quality.py  analyze_imports.py  analyze_sa1_hypothesis.py  analyze_wram_staging.py  check_type_errors.py  extract_sprite_from_capture.py  generate_quality_report.py  infrastructure_analyzer.py  launch_detached_gallery.py  mark_serial_tests.py  migrate_qt_tests.py  migrate_v1_to_v2.py  monitor_mock_density.py  profile_dialog_leaks.py  run_memory_leak_tests.py  run_parallel_tests.py  run_performance_validation.py  run_stability_tests.py  show_critical_errors.py  sprite_clipboard_monitor.py  summarize_rom_trace.py  test_sprite_mapper.py  validate_schema.py  validation_usage_examples.py
spritepal/tests/: FIXTURE_CHEATSHEET.md  FLAKY_WAIT_REPLACEMENT_GUIDE.md  HEADLESS_TESTING.md  MARKER_GUIDE.md  README.md  conftest.py  conftest_dialog_patch.py  demo_real_qt_testing.py  infrastructure_cleanup_report.txt  run_test_analysis.py  test_application_state_manager.py  test_async_rom_cache.py  test_base_manager.py  test_bookmark_manager.py  test_cache_invalidation.py  test_circular_dependency_fix.py  test_collapsible_group_box.py  test_complete_ui_workflows_integration.py  test_complete_user_workflow_integration.py  test_comprehensive_dialog_migrations.py  test_comprehensive_typing_example.py  test_configuration_service.py  test_console_error_handler.py  test_constants.py  test_constants_validation.py  test_controller_dependency_injection.py  test_controller_fix_validation.py  test_controller_real.py  test_controller_real_manager_integration.py  test_controller_real_managers.py  test_core_operations_manager.py  test_correctness_fixes.py  test_cross_dialog_integration_real.py  test_dark_theme_accessibility.py  test_dark_theme_colors.py  test_dark_theme_components.py  test_dark_theme_constants.py  test_dark_theme_integration.py  test_dark_theme_widgets.py  test_decomp.py  (+133 more)
spritepal/ui/: __init__.py  extraction_controller.py  extraction_panel.py  grid_arrangement_dialog.py  injection_dialog.py  main_window.py  palette_preview.py  rom_extraction_panel.py  row_arrangement_dialog.py  zoomable_preview.py
spritepal/utils/: __init__.py  constants.py  error_handler_examples.py  exceptions.py  file_validator.py  image_utils.py  logging_config.py  math_utils.py  preview_generator.py  rom_backup.py  rom_cache.py  rom_utils.py  safe_logging.py  settings_manager.py  signal_registry.py  sprite_history_manager.py  sprite_regions.py  state_manager.py  thread_safe_singleton.py  type_aliases.py  unified_error_handler.py  update_throttler.py  validation.py
(+2903 files in other folders)
