[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spritepal"
version = "0.1.0"
description = "SNES Sprite Editor for Kirby Super Star"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SpritePal Contributors"}
]
keywords = ["snes", "sprite", "editor", "kirby", "retro", "gaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Editors",
]

dependencies = [
    "PySide6>=6.5.0,<7.0",
    "Pillow>=10.0.0,<12.0",
    "numpy>=1.24.0,<3.0",
    "psutil>=5.9.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-qt>=4.3.0,<5.0",
    "pytest-cov>=4.1.0,<6.0",
    "pytest-timeout>=2.2.0,<3.0",
    "pytest-mock>=3.10.0,<4.0",
    "ruff>=0.8.0,<1.0",
    "basedpyright>=1.18.0,<2.0",
    "pre-commit>=3.6.0,<4.0",
]

# Uncomment when project has a public repository
# [project.urls]
# Homepage = "https://github.com/your-username/spritepal"
# Repository = "https://github.com/your-username/spritepal"

[project.scripts]
spritepal = "spritepal.launch_spritepal:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spritepal*"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "venv",
    "archive*",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    # "T20" omitted - T201 (print) is ignored globally, so no point selecting it
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "PIE",    # flake8-pie
    "PL",     # pylint
    "TRY",    # tryceratops (exception handling)
    "PERF",   # perflint (performance)
    "FURB",   # refurb (modern Python)
    "LOG",    # flake8-logging
    "EM",     # flake8-errmsg
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420 (require __init__.py)
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
    "FBT",    # flake8-boolean-trap
    "ICN",    # flake8-import-conventions
    "PYI",    # flake8-pyi (type stub rules)
    "DTZ",    # flake8-datetimez (timezone-aware datetime)
    "PTH",    # flake8-use-pathlib (modern path handling)
]

ignore = [
    # Formatting (handled by formatter)
    "E501",     # line length (120 is fine, don't be pedantic)
    "W291",     # trailing-whitespace
    "W293",     # blank-line-with-whitespace

    # Import ordering (Qt apps need delayed imports for circular deps)
    "E402",     # module level import not at top
    "PLC0415",  # import-outside-top-level

    # Complexity (Qt widgets can be complex, but track it)
    "PLR0912",  # too-many-branches (>12)
    "PLR0915",  # too-many-statements (>50)
    "PLR0911",  # too-many-return-statements
    "PLR0913",  # too-many-arguments (Qt signals have many)
    "PLR2004",  # magic-value-comparison (common in pixel math)
    "PLR0904",  # too-many-public-methods (Qt classes)

    # Style preferences that don't catch bugs
    "SIM102",   # collapsible-if (readability preference)
    "SIM108",   # if-else-block-instead-of-if-exp (ternary)
    "SIM117",   # multiple-with-statements
    "SIM115",   # open-file-with-context-handler

    # Qt-specific patterns (legitimate usage)
    "RUF012",   # mutable class default (Qt signals)
    "RUF059",   # unused-unpacked-variable (signal handlers)
    "ARG001",   # unused-function-argument (Qt callbacks)
    "ARG002",   # unused-method-argument (Qt overrides)
    "ARG003",   # unused-class-method-argument (Qt overrides)
    "ARG004",   # unused-static-method-argument
    "ARG005",   # unused-lambda-argument (Qt callbacks)
    "B007",     # unused-loop-control-variable (Qt iteration)
    "B023",     # function-uses-loop-variable (Qt callbacks)

    # Security (not a web app, user controls input)
    "S101",     # assert-used (fine for desktop apps)
    "S108",     # hardcoded temp file (we use proper temp handling)
    "S110",     # try-except-pass (often legitimate in Qt)
    "S112",     # try-except-continue (often legitimate)
    "S301",     # suspicious-pickle-usage (legitimate for serialization)
    "S311",     # pseudo-random-generator (not cryptographic)
    "S324",     # insecure-hash-function (md5 for checksums, not crypto)
    "S603",     # subprocess-without-shell-equals-true
    "S607",     # start-process-with-partial-path

    # Exceptions (Qt has its own patterns)
    "TRY002",   # raise-vanilla-class (raise Exception is fine)
    "TRY003",   # raise-vanilla-args (Qt exceptions)
    "TRY300",   # consider-else-block (style preference)
    "TRY301",   # raise-within-except (can be legitimate)
    "TRY400",   # logging-error-instead-of-exception
    "TRY401",   # verbose-log-message (f-strings in logging fine)
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception

    # Boolean trap (Qt APIs use bool params extensively)
    "FBT001",   # boolean-positional-arg-in-function-definition
    "FBT002",   # boolean-default-value-positional-argument
    "FBT003",   # boolean-positional-value-in-function-call

    # Type checking imports (handled by TYPE_CHECKING blocks)
    "TC001",    # typing-only-first-party-import
    "TC002",    # typing-only-third-party-import
    "TC003",    # typing-only-standard-library-import
    "TC006",    # typing-cast-quotes (style preference for cast())

    # Naming (Qt uses camelCase for overrides)
    "N802",     # invalid-function-name (Qt overrides like paintEvent)
    "N803",     # invalid-argument-name (Qt params like QWidget)
    "N806",     # non-lowercase-variable-in-function
    "N812",     # lowercase-imported-as-non-lowercase
    "N813",     # camelcase-imported-as-lowercase
    "N815",     # mixed-case-variable-in-class-scope
    "N818",     # error-suffix-on-exception-name

    # Other pragmatic ignores
    "INP001",   # implicit-namespace-package (scripts don't need __init__)
    "RET504",   # unnecessary-assign (readability)
    "RET505",   # superfluous-else-return (style preference)
    "RET506",   # superfluous-else-raise (style preference)
    "PIE790",   # unnecessary-pass (explicit pass is fine)
    "PERF203",  # try-except-in-loop (Qt event loops)
    "PERF401",  # manual-list-comprehension (readability)
    "PERF402",  # manual-list-copy
    "PLW1510",  # subprocess-run-without-check (intentional)
    "PLW1641",  # eq-without-hash
    "PLW2901",  # redefined-loop-name (common pattern)
    "PLW0603",  # global-statement (sometimes needed for singletons)
    "PLR1704",  # redefining-argument-with-local-name
    "G004",     # logging-f-string (f-strings are fine)
    "G003",     # logging-plus-concat (string concat in logging)
    "G201",     # logging-exc-info (error with exc_info is fine)
    "PYI024",   # collections-named-tuple (not using stubs)
    "PYI034",   # non-self-return-type (PEP 673 __new__)
    "PYI036",   # bad-exit-annotation (not using stubs)
    "PYI041",   # redundant-numeric-union (int | float -> float)
    "PYI056",   # unsupported-method-call-on-typevar
    "E712",     # true-false-comparison (sometimes intentional)
    "SIM103",   # needless-bool (return bool comparison)
    "SIM105",   # suppressible-exception (suppress vs try/except style)
    "ERA001",   # commented-out-code (too many false positives)
    "ICN001",   # unconventional-import-alias (numpy as np is fine)
    "RUF034",   # useless-if-else (style preference)
    "PIE810",   # call-single-arg-startswith-endswith
    "LOG015",   # root-logger-call (fine for desktop app)
    "PT013",    # incorrect-pytest-import (import pytest.raises)
    "A001",     # shadowing-builtin-variable
    "A002",     # shadowing-builtin (many Qt methods use id, type, etc.)
    "TRY004",   # type-check-without-type-error
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"spritepal/tests/**/*.py" = [
    "S",        # security (test code is not production)
    "PLR2004",  # magic values
    "B017",     # assert raises
    "B018",     # useless expression
    "RUF",      # ruff rules (ambiguous unicode, etc.)
    "F401",     # unused imports (test fixtures)
    "ARG",      # unused arguments in test fixtures
    "PT",       # pytest style (flexible in tests)
    "ERA001",   # commented code (test examples)
    "N",        # naming (test functions can be descriptive)
]
"**/conftest.py" = ["ARG", "PT", "F401"]
"spritepal/mesen2_integration/*.py" = ["E722", "B904", "T201", "S"]
"spritepal/scripts/*.py" = ["E722", "B904", "F401", "T201", "INP001", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["spritepal"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"numpy" = "np"
"PIL.Image" = "PILImage"

[tool.ruff.lint.mccabe]
max-complexity = 15  # Qt widgets can be complex; default is 10

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# ============================================================================
# Basedpyright Configuration (STRICT)
# ============================================================================
[tool.basedpyright]
include = ["spritepal/core", "spritepal/ui", "spritepal/utils"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "spritepal/tests",
    "spritepal/mesen2_integration",
    "spritepal/scripts",
]
pythonVersion = "3.11"
pythonPlatform = "All"

# STRICT MODE - enforces proper typing throughout
typeCheckingMode = "strict"

# ---- Core type safety (all enabled) ----
reportMissingImports = true
reportInvalidTypeForm = true
reportDuplicateImport = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStringEscapeSequence = true
reportMatchNotExhaustive = true

# ---- Now errors instead of warnings ----
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportMissingTypeArgument = true
reportUnreachable = true

# ---- Enable stricter checks ----
reportMissingParameterType = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = false   # Too noisy - intentional multi-line strings
reportPrivateImportUsage = true
reportConstantRedefinition = false          # Platform-conditional constants are fine
reportImplicitOverride = true
reportPropertyTypeMismatch = true
reportTypeCommentUsage = true               # Prefer inline annotations

# ---- Qt-specific relaxations (truly necessary) ----
reportMissingTypeStubs = false              # PySide6 stubs are incomplete
reportUnknownParameterType = false          # Qt callbacks often untyped
reportUnknownArgumentType = false           # Qt signal/slot args
reportUnknownLambdaType = false             # Lambda in Qt connections
reportUnknownVariableType = false           # Qt dynamic attributes
reportUnknownMemberType = false             # Qt dynamic members
reportUnnecessaryTypeIgnoreComment = false  # Allow defensive ignores
reportUnusedCallResult = false              # Qt methods return values we ignore
reportAny = false                           # Qt uses Any extensively
reportExplicitAny = false                   # Allow explicit Any for Qt
reportPrivateUsage = false                  # Qt internals often accessed
reportUntypedFunctionDecorator = false      # Qt decorators untyped
reportUntypedClassDecorator = false         # Same issue
reportUntypedBaseClass = false              # Some Qt mixins untyped
reportUntypedNamedTuple = false             # Some legacy tuples

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["spritepal/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["."]

# Show extra test summary info
addopts = "-v --tb=short --strict-markers"

# Qt-specific settings for pytest-qt
qt_api = "pyside6"
qt_qpa_platform = "offscreen"
qt_default_raise = true
qt_wait_timeout = 10000
# Test collection settings
norecursedirs = [".git", "__pycache__", "*.egg-info", ".pytest_cache", "venv", ".venv"]

# pytest-timeout settings
timeout = 30
timeout_method = "thread"

filterwarnings = [
    "ignore::DeprecationWarning:PySide6",
    "ignore::RuntimeWarning:PySide6",
    "ignore:.*QApplication.*:RuntimeWarning",
    "ignore:.*QThread.*:RuntimeWarning",
]

# Markers actually used in the test suite (audited via grep)
markers = [
    # Primary execution environment markers
    "gui: GUI tests requiring display/X11 environment",
    "headless: Tests that can run without display",
    "mock_only: Tests using only mocked components",

    # Test type markers
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (may require files, databases, services)",
    "benchmark: Performance benchmarking tests",
    "performance: Performance tests",
    "stress: Stress/load testing",
    "slow: Slow tests (>1s execution time)",

    # Qt component markers
    "qt_real: Tests using real Qt components",
    "qt_mock: Tests using mocked Qt components",
    "qt_app: Tests requiring QApplication instance",
    "no_qt: Tests with no Qt dependencies",
    "qt_no_exception_capture: Disable Qt exception capture",

    # Manager markers
    "no_manager_setup: Tests that skip manager initialization",
    "isolated_managers: Tests requiring fresh manager instances",

    # Data and resource markers
    "real_hal: Tests using real HAL components",
    "requires_rom: Tests that require ROM file data",

    # UI markers
    "mock_gui: Tests using mocked GUI components",
    "mock_dialogs: Tests that mock dialog exec() methods",
    "no_gui: Tests that should not use GUI components",

    # Stability markers
    "stability: Stability/regression tests",
    "thread_safety: Thread safety tests",

    # Execution control markers
    "timeout: Set custom timeout for test",
    "ci_safe: Tests safe for CI environments",

    # Platform markers
    "asyncio: Tests using asyncio functionality",

    # Display/environment markers
    "requires_display: Tests requiring display environment",
    "qt_integration: Qt integration tests",

    # Resource markers
    "file_io: Tests involving file I/O operations",
    "rom_data: Tests involving ROM data processing",
    "signals_slots: Tests involving Qt signals and slots",
    "widget: Tests involving Qt widgets",
    "dialog: Tests involving dialog components",

    # Execution control markers
    "serial: Tests that must run serially (no parallelization)",
    "process_pool: Tests using process pools",
    "worker_threads: Tests using worker threads",
    "segfault_prone: Tests prone to segfaults (handle carefully)",
    "mock: Tests using mock objects",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["spritepal"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*conftest.py",
    "*/scripts/*",
    "*/mesen2_integration/*",
]

[tool.coverage.report]
# Fail if coverage drops below threshold (conservative starting point)
fail_under = 50
show_missing = true
skip_covered = true
ignore_errors = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
